# STTnTTS

./: README.md  pyproject.toml
sttntts/: audio_detect_thr.py  audio_player.py  main.py  stt_thr.py  tts.py  twitch_sender.py
